PMD Cleanup - Misc Rule Sets. Included TFCRuleSet xml config file that can be imported for PMD.
Unnecessary fully qualified names, Clone/copy array parameters instead of storing directly, Loose coupling, Unused private methods (commented out), Integer instantiation
Fixed small ore clusters calling the vein method for generation