@@ -2,6 +2,7 @@ package com.bioxx.tfc.Entities.Mobs;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Random;
 
 import net.minecraft.entity.*;
@@ -137,7 +138,7 @@ public class EntityBear extends EntityTameable implements ICausesDamage, IAnimal
 	}
 
 
-	public EntityBear (World par1World, IAnimal mother, ArrayList<Float> data)
+	public EntityBear(World par1World, IAnimal mother, List<Float> data)
 	{
 		this(par1World);
 		float fatherSize = 1;
@@ -192,7 +193,7 @@ public class EntityBear extends EntityTameable implements ICausesDamage, IAnimal
 	{
 		super.entityInit ();
 		dataWatcher.addObject (18, getHealth());
-		this.dataWatcher.addObject(13, new Integer(0)); //sex (1 or 0)
+		this.dataWatcher.addObject(13, Integer.valueOf(0)); //sex (1 or 0)
 		this.dataWatcher.addObject(15, Integer.valueOf(0));		//age
 		this.dataWatcher.addObject(22, Integer.valueOf(0)); //Size, strength, aggression, obedience
 		this.dataWatcher.addObject(23, Integer.valueOf(0)); //familiarity, familiarizedToday, pregnant, empty slot
