@@ -2,6 +2,7 @@ package com.bioxx.tfc.Entities.Mobs;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.List;
 
 import net.minecraft.entity.*;
 import net.minecraft.entity.ai.EntityAIMoveTowardsRestriction;
@@ -101,7 +102,7 @@ public class EntityCowTFC extends EntityCow implements IAnimal
 		//this.setGrowingAge((int) TFC_Time.getTotalDays());
 	}
 
-	public EntityCowTFC(World par1World, IAnimal mother,  ArrayList<Float> data)
+	public EntityCowTFC(World par1World, IAnimal mother, List<Float> data)
 	{
 		this(par1World);
 		float fatherSize = 1;
@@ -136,7 +137,7 @@ public class EntityCowTFC extends EntityCow implements IAnimal
 	protected void entityInit()
 	{
 		super.entityInit();	
-		this.dataWatcher.addObject(13, new Integer(0)); //sex (1 or 0)
+		this.dataWatcher.addObject(13, Integer.valueOf(0)); //sex (1 or 0)
 		this.dataWatcher.addObject(15, Integer.valueOf(0));		//age
 		
 		this.dataWatcher.addObject(22, Integer.valueOf(0)); //Size, strength, aggression, obedience
