@@ -2,6 +2,7 @@ package com.bioxx.tfc.Entities.Mobs;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.List;
 
 import net.minecraft.entity.*;
 import net.minecraft.entity.ai.EntityAITempt;
@@ -114,7 +115,8 @@ public class EntitySheepTFC extends EntitySheep implements IShearable, IAnimal
 		//For Testing Only(makes spawned animals into babies)
 		//this.setGrowingAge((int) TFC_Time.getTotalDays());
 	}
-	public EntitySheepTFC(World par1World,IAnimal mother,  ArrayList<Float> data)
+
+	public EntitySheepTFC(World par1World, IAnimal mother, List<Float> data)
 	{
 		this(par1World);
 		float fatherSize = 1;
@@ -150,7 +152,7 @@ public class EntitySheepTFC extends EntitySheep implements IShearable, IAnimal
 	protected void entityInit()
 	{
 		super.entityInit();	
-		this.dataWatcher.addObject(13, new Integer(0)); //sex (1 or 0)
+		this.dataWatcher.addObject(13, Integer.valueOf(0)); //sex (1 or 0)
 		this.dataWatcher.addObject(15, Integer.valueOf(0));		//age
 		
 		this.dataWatcher.addObject(22, Integer.valueOf(0)); //Size, strength, aggression, obedience
